# dns-proxy

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml
src/: dns.py  main.py
